correction of bug with multiple windows and logical function edition panels