@@ -18,9 +18,9 @@ import fr.univmrs.tagc.GINsim.regulatoryGraph.OmddNode;
 import fr.univmrs.tagc.GINsim.regulatoryGraph.mutant.GsRegulatoryMutantDef;
 
 /**
- * 
+ *
  * Search all the non functional interactions in the graph 'g' and do some actions on them depending on the options (opt_*).
- * 
+ *
  */
 public class InteractionAnalysis {
 	private boolean opt_annotate;
@@ -34,20 +34,20 @@ public class InteractionAnalysis {
 	private Map functionalityMap = null;
 	private CascadingStyle cs = null;
 	private InteractionAnalysisSelector selector = null;
-	
+
 	private long before; //to know the time elapsed in the algorithm
 	private int i_leafs;
-	
+
 	static final int FUNC_NON = 1;
 	static final int FUNC_POSITIVE = 2;
 	static final int FUNC_NEGATIVE = 3;
 	static final int FUNC_DUAL = 4;
-	
-	
+
+
 	/**
-	 * 
+	 *
 	 * Search all the non functional interactions in the graph 'g' and do some actions on them depending on the options (opt_*).
-	 * 
+	 *
 	 * @param g the graph where to search the non functional interactions.
 	 * @param opt_color boolean indicating if the non functional edges should be colored in 'opt_color_inactive'.
 	 * @param opt_simplify boolean indicating if the non functional edges should be removed from the graph.
@@ -61,7 +61,7 @@ public class InteractionAnalysis {
 		this.mutant = mutant;
 		this.g = g;
 		this.gm = g.getGraphManager();
-		
+
 		log = new StringBuffer(1024);
 		log("Find inactive interactions on ");
 		log(g.getGraphName());
@@ -73,13 +73,13 @@ public class InteractionAnalysis {
 
 	/**
 	 * Search all the non functional interactions in the graph 'g' and do some actions on them depending on the options (opt_*).
-	 * 
+	 *
 	 * For each vertices, scan the reduced Omdd representation of the vertex logical function to know which vertices are effective (<=>present). If an edge source vertex incoming on this vertex is not in the Omdd, then its non functional.
-	 * 
+	 *
 	 */
 	private void run() {
 		before = (new Date()).getTime();//measuring the time spend for this algorithm
-		
+
 		int total_level;		//The total number of node in a complete omdd tree. (products of levels of each interactor)
 		int [] leafs;			//The values of all the leafs for a complete omdd from all the node to 0, to all the node to max.
 		int [] subtree_size;	//The size of all the complete subtree (tree of a child) of the current node
@@ -92,20 +92,20 @@ public class InteractionAnalysis {
 		if (mutant != null) {
 			mutant.apply(t_tree, g);
 		}
-		
+
 		List nodeOrder = g.getNodeOrder();
 		node_to_position = new HashMap((int) (gm.getVertexCount()*1.5));					//m.get(vertex) => its position in the nodeOrder as an Integer.
 		int i = 0;
 		for (Iterator it = nodeOrder.iterator(); it.hasNext();) {							//Build the map m
-			node_to_position.put(it.next(), Integer.valueOf(i++));
+			node_to_position.put(it.next(), new Integer(i++));
 		}
-				
+
 		functionalityMap = new HashMap();
-		
+
 		//Prepare colorisation
 		selector = new InteractionAnalysisSelector();
 		selector.setCache(functionalityMap);
-	
+
 		if (opt_verbose) {
 			i = 0;
 			log("Node order : ");
@@ -113,16 +113,16 @@ public class InteractionAnalysis {
 				GsRegulatoryVertex v = (GsRegulatoryVertex) it.next();
 				log(v.getId()+"["+(i++)+"]:"+v.getMaxValue()+"  ");
 			}
-			log("\n\n");			
+			log("\n\n");
 		}
-		
+
 		node_in_subtree = new HashMap();
 		i = 0;
 		for (Iterator it = g.getNodeOrder().iterator(); it.hasNext();) {					//  For each vertex v in the graph
 			GsRegulatoryVertex v = (GsRegulatoryVertex) it.next();
 			List l = gm.getIncomingEdges(v);												//  get the list l of incoming edges
 			OmddNode omdd = t_tree[i++];
-			
+
 			total_level = 1;																//  Compute the total number of level in the omdd tree
 			for (Iterator it2 = l.iterator(); it2.hasNext();) {
 				GsRegulatoryVertex vs = (GsRegulatoryVertex) ((GsJgraphDirectedEdge) it2.next()).getSourceVertex();
@@ -130,14 +130,14 @@ public class InteractionAnalysis {
 			}
 			leafs = new int[total_level];
 			i_leafs = 0;
-						
+
 			subtree_size = new int[l.size()+1];											//Compute the size of the subtrees
 			subtree_size[0] = total_level;
 			small_node_order_vertex = new GsRegulatoryVertex[l.size()];
 			small_node_order_level = new int[l.size()];
 			int m = 0;
 			for (Iterator it2 = nodeOrder.iterator(); it2.hasNext();) {
-				GsRegulatoryVertex vs = (GsRegulatoryVertex) it2.next();				
+				GsRegulatoryVertex vs = (GsRegulatoryVertex) it2.next();
 				if (gm.getEdge(vs, v) != null) {
 					node_in_subtree.put(vs, new Integer(m));
 					subtree_size[m+1] = 1;
@@ -194,7 +194,7 @@ public class InteractionAnalysis {
 
 			}
 		}
-				
+
 		if (opt_verbose) {
 			log("\nTime elapsed : ");
 			log((new Date()).getTime()-before);
@@ -202,13 +202,13 @@ public class InteractionAnalysis {
 		}
 	}
 	/**
-	 * 
+	 *
 	 * @return the Set of nonFunctionalInteractions or null if it has not been computed
 	 */
 	public Map getFunctionality() {
 		return functionalityMap;
 	}
-	
+
 	/**
 	 * Colorize the edges in the Set nonFunctionalInteractions.
 	 */
@@ -216,7 +216,7 @@ public class InteractionAnalysis {
 		if (functionalityMap == null) return;
 		if (cs == null) cs = new CascadingStyle(true);
 		else cs.shouldStoreOldStyle = false;
-		
+
 		GsEdgeAttributesReader ereader = gm.getEdgeAttributesReader();
 		for (Iterator iterator = functionalityMap.keySet().iterator(); iterator.hasNext();) {
 			GsRegulatoryMultiEdge me = (GsRegulatoryMultiEdge) iterator.next();
@@ -231,10 +231,10 @@ public class InteractionAnalysis {
 				cs.applyOnEdge(selector, me, ereader);
 			}
 		}
-		
+
 //		cs.applySelectorOnEdges(selector, nonFunctionalInteractions.keySet(), gm.getEdgeAttributesReader());
 	}
-	
+
 	public void undoColorize() {
 		cs.restoreAllEdges(functionalityMap.keySet(), gm.getEdgeAttributesReader());
 	}
@@ -242,12 +242,12 @@ public class InteractionAnalysis {
 	/**
 	 * Recursive function scanning an OmddNode 'omdd' and call itself on the 'omdd' children.
 	 * When the function end, the array 'leaf' contains the value of all the real leafs.
-	 * 	 * 
+	 * 	 *
 	 * @param omdd the current OmddNode to scan. Should be the root at the first call.
 	 * @param deep the deep call.
 	 * @param leafs the resulting array.
-	 * @param small_node_order 
-	 * @param subtree_size 
+	 * @param small_node_order
+	 * @param subtree_size
 	 */
 	private int scannOmdd(OmddNode omdd, int deep, int [] leafs, int[] subtree_size, GsRegulatoryVertex[] small_node_order_vertex, int[] small_node_order_levels) {
 		if (omdd.next == null) { 								//If the current node is leaf
@@ -257,7 +257,7 @@ public class InteractionAnalysis {
 			} else {												//not real, ie. some inputs are not present in the branch
 				if (omdd.value == 0) {
 					i_leafs += subtree_size[deep];		//if value is 0, skip them because the array is initialized to 0
-				} else {													//else add the unreal leaf value to each of the real leafs 
+				} else {													//else add the unreal leaf value to each of the real leafs
 					for (int i = 0; i < subtree_size[deep]; i++) {
 						leafs[i_leafs++] = omdd.value;
 					}
@@ -266,7 +266,7 @@ public class InteractionAnalysis {
 				return subtree_size[deep];
 			}
 		}
-		
+
 		boolean hasJumpedNode = false;
 		int current_i = i_leafs, current_deep = deep;
 		while (omdd.level != small_node_order_levels[deep]) {
@@ -288,15 +288,15 @@ public class InteractionAnalysis {
 					leafs[j] = leafs[j-added];
 				}
 				i_leafs += added;
-			} 
+			}
 			return i_leafs;
 		}
 		return res;
 	}
-	
+
 	/**
 	 * Compute the functionality of the 'node_index'-nth node in the omdd represented by 'leafs'.
-	 * 
+	 *
 	 * @param count_childs the count of child above 'node_index'
 	 * @param node_index the node to consider
 	 * @param leafs a table of all the leafs of the complete omdd tree.
@@ -306,11 +306,11 @@ public class InteractionAnalysis {
 	 */
 	private int computeFunctionality(int count_childs, int node_index, int[] leafs, int[] subtree_size_t, GsRegulatoryVertex[] small_node_order) {
 		int size_of_subtree = subtree_size_t[node_index+1];
-		
+
 		if (opt_verbose) {
 			log("  Leafs ");
 			print_t(leafs);
-		}		
+		}
 		int res = FUNC_NON;
 		int index = 0;
 		while (index+size_of_subtree < leafs.length) {
@@ -388,13 +388,13 @@ public class InteractionAnalysis {
 	public StringBuffer getLog() {
 		return log;
 	}
-	
+
 	protected void finalize() {
 		if (functionalityMap != null) {
 			if (selector != null) selector.flush(); //remove nonFunctionalInteractions from the cache.
 		}
 	}
-	
+
 	private void print_t(int[] t) {
 		log("[");
 		for (int i = 0; i < t.length - 1; i++) {
